--- a/Debug_Stick_RP/texts/ja_JP.lang
+++ b/Debug_Stick_RP/texts/ja_JP.lang
@@ -4,14 +4,47 @@ pack.item.add:debug_stick.name=§dデバッグ棒
 pack.item.add:experiment.name=§d検証ツール
 
 ## code
-pack.stairs.bottom=「half」をbottomに変更しました
-pack.stairs.top=「half」をtopに変更しました
-pack.stairs.west=「facing」をwestに変更しました
-pack.stairs.south=「facing」をsouthに変更しました
-pack.stairs.north=「facing」をnorthに変更しました
-pack.stairs.east=「facing」をeastに変更しました
-pack.slab.bottom=「type」をbottomに変更しました
-pack.slab.top=「type」をtopに変更しました
-pack.slab.double=「type」をdoubleに変更しました
+pack.pick.stairs.bottom=「half」を選択しました（true）
+pack.change.stairs.bottom=「half」をbottomに変更しました
+pack.pick.stairs.top=「half」を選択しました（false）
+pack.change.stairs.top=「half」をtopに変更しました
+pack.pick.stairs.west=「facing」を選択しました（west）
+pack.change.stairs.west=「facing」をwestに変更しました
+pack.pick.stairs.south=「facing」を選択しました（south）
+pack.change.stairs.south=「facing」をsouthに変更しました
+pack.pick.stairs.north=「facing」を選択しました（north）
+pack.change.stairs.north=「facing」をnorthに変更しました
+pack.pick.stairs.east=「facing」を選択しました（east）
+pack.change.stairs.east=「facing」をeastに変更しました
+pack.pick.slab.bottom=「type」を選択しました（bottom）
+pack.change.slab.bottom=「type」をbottomに変更しました
+pack.pick.slab.top=「type」を選択しました（top）
+pack.change.slab.top=「type」をtopに変更しました
+pack.pick.slab.double=「type」を選択しました（double）
+pack.change.slab.double=「type」をdoubleに変更しました
+
+pack.pick.trapdoor.west=「facing」を選択しました（west）
+pack.change.trapdoor.west=「facing」をwestに変更しました
+
+pack.pick.trapdoor.south=「facing」を選択しました（south）
+pack.change.trapdoor.south=「facing」をsouthに変更しました
+
+pack.pick.trapdoor.north=「facing」を選択しました（north）
+pack.change.trapdoor.north=「facing」をnorthに変更しました
+
+pack.pick.trapdoor.east=「facing」を選択しました（east）
+pack.change.trapdoor.east=「facing」をeastに変更しました
+
+pack.pick.trapdoor.open_false=「open」を選択しました（false）
+pack.change.trapdoor.open_false=「open」をfalseに変更しました
+
+pack.pick.trapdoor.open_true=「open」を選択しました（true）
+pack.change.trapdoor.open_true=「open」をtrueに変更しました
+
+pack.pick.trapdoor.down=「half」を選択しました（bottom）
+pack.change.trapdoor.down=「half」をbottomに変更しました
+
+pack.pick.trapdoor.up=「half」を選択しました（top）
+pack.change.trapdoor.up=「half」をtopに変更しました
 
 pack.no.properties=はプロパティを持っていません
