--- a/Debug_Stick_RP/texts/ja_JP.lang
+++ b/Debug_Stick_RP/texts/ja_JP.lang
@@ -2,6 +2,7 @@ pack.name=デバッグ棒 RP
 pack.description=Java版にあるデバッグ棒の再現です。
 pack.item.mc:debug_stick.name=§dデバッグ棒
 pack.item.mc:experiment.name=§d検証ツール
+pack.item.mc:test.name=§dテストツール
 
 pack.pick.half.bottom=「half」を選択しました（bottom）
 pack.change.half.bottom=「half」をbottomに変更しました
