--- a/Debug_Stick_BP/texts/en_US.lang
+++ b/Debug_Stick_BP/texts/en_US.lang
@@ -1,2 +1,2 @@
-pack.name=Debug Stick BP
-pack.description=This is a recreation of the Debug Stick found in the Java version.
+pack.name=Debug Stick v1.21.41
+pack.description=This addon is a recreation of the Debug Stick found in the Java version.
