--- a/Debug_Stick_RP/texts/en_US.lang
+++ b/Debug_Stick_RP/texts/en_US.lang
@@ -1,5 +1,5 @@
-pack.name=Debug Stick RP
-pack.description=This is a recreation of the Debug Stick found in the Java version.
+pack.name=Debug_Stick RP v1.21.41
+pack.description=This addon is a recreation of the Debug Stick found in the Java version.
 pack.item.mc:debug_stick.name=§dDebug Stick
 pack.item.mc:experiment.name=§dValidation tool
 pack.item.mc:test.name=§dtest tool
