--- a/Debug_Stick_RP/texts/ja_JP.lang
+++ b/Debug_Stick_RP/texts/ja_JP.lang
@@ -1,7 +1,6 @@
-pack.name=Debug_Stick RP v1.21.41
+pack.name=Debug_Stick RP v1.0.0-alpha
 pack.description=このアドオンは、Java版にあるデバッグ棒の再現です。
-pack.item.mc:debug_stick.name=§dデバッグ棒
-pack.item.mc:experiment.name=§d検証ツール
+pack.item.mc:debug_stick.name=§dデバッグ棒§r
 
 pack.pick.half.bottom=「half」を選択しました（bottom）
 pack.change.half.bottom=「half」をbottomに変更しました
