--- a/Debug_Stick_RP/texts/en_US.lang
+++ b/Debug_Stick_RP/texts/en_US.lang
@@ -1,4 +1,3 @@
-pack.name=Debug_Stick RP v1.21.41
+pack.name=Debug_Stick RP v1.0.0-alpha
 pack.description=This addon is a recreation of the Debug Stick found in the Java version.
-pack.item.mc:debug_stick.name=§dDebug Stick
-pack.item.mc:experiment.name=§dValidation tool
+pack.item.mc:debug_stick.name=§dDebug Stick§r
