--- a/Debug_Stick_BP/texts/en_US.lang
+++ b/Debug_Stick_BP/texts/en_US.lang
@@ -1,2 +1,2 @@
 pack.name=Debug Stick v1.0.0-alpha
-pack.description=This addon is a recreation of the Debug Stick found in the Java version.
+pack.description=This add-on is a recreation of the debug stick found in the Java Edition for the Bedrock Edition.
