多言語化・仕様の変更

--- a/Debug_Stick_RP/texts/en_US.lang
+++ b/Debug_Stick_RP/texts/en_US.lang
@@ -1,3 +1,6 @@
 pack.name=Debug_Stick RP v1.0.0-alpha
 pack.description=This add-on is a recreation of the debug stick found in the Java Edition for the Bedrock Edition.
 pack.item.mc:debug_stick.name=§dDebug Stick§r
+pack.steate.mode=selected "%1" (%2)
+pack.state.change="%1" to %2
+pack.no.properties=%1 has no properties
