翻訳の修正

--- a/Debug_Stick_RP/texts/ja_JP.lang
+++ b/Debug_Stick_RP/texts/ja_JP.lang
@@ -1,4 +1,4 @@
-pack.name=Debug_Stick RP v1.0.0-alpha
+pack.name=デバッグ棒 RP v1.0.0
 pack.description=このアドオンは、Java版にあるデバッグ棒を統合版用に再現したものです。
 pack.item.mc:debug_stick.name=§dデバッグ棒§r
 pack.steate.mode=「%1」を選択しました（%2）
