--- a/Debug_Stick_RP/texts/en_US.lang
+++ b/Debug_Stick_RP/texts/en_US.lang
@@ -1,5 +1,5 @@
 pack.description=This add-on is a recreation of the debug stick found in the Java Edition for the Bedrock Edition.
-pack.item.mc:debug_stick.name=§dDebug Stick§r
+pack.item.mc:debug_stick.name=Debug Stick
 pack.steate.mode=selected "%1" (%2)
 pack.state.change="%1" to %2
 pack.no.properties=%1 has no properties
