--- a/Debug_Stick_RP/texts/ja_JP.lang
+++ b/Debug_Stick_RP/texts/ja_JP.lang
@@ -1,5 +1,5 @@
 pack.description=このアドオンは、Java版にあるデバッグ棒を統合版用に再現したものです。
-pack.item.mc:debug_stick.name=§dデバッグ棒§r
+pack.item.mc:debug_stick.name=デバッグ棒
 pack.steate.mode=「%1」を選択しました（%2）
 pack.state.change=「%1」を%2に変更しました
 pack.no.properties=%1はプロパティを持っていません
