--- a/Debug_Stick_RP/texts/en_US.lang
+++ b/Debug_Stick_RP/texts/en_US.lang
@@ -1,5 +1,9 @@
 pack.description=This add-on is a recreation of the debug stick found in the Java Edition for the Bedrock Edition.
-pack.item.mc:debug_stick.name=Debug Stick
-pack.steate.mode=selected "%1" (%2)
-pack.state.change="%1" to %2
-pack.no.properties=%1 has no properties
+debug_stick.item.dmc:debug_stick.name=Debug Stick
+debug_stick.steate.mode=selected "%1" (%2)
+debug_stick.state.change="%1" to %2
+debug_stick.no.properties=%1 has no properties
+
+debug_stick.settings.title=Debug Stick Settings
+debug_stick.settings.toggle.states="Add Unused States"
+debug_stick.settings.updated= Setting updated to "%1"
