--- a/Debug_Stick_RP/texts/en_US.lang
+++ b/Debug_Stick_RP/texts/en_US.lang
@@ -1,14 +1,15 @@
 pack.description=This add-on is a recreation of the debug stick found in the Java Edition for the Bedrock Edition.
-debug_stick.item.dmc:debug_stick.name=Debug Stick
-debug_stick.steate.mode=selected "%1" (%2)
-debug_stick.state.change="%1" to %2
-debug_stick.no.properties=%1 has no properties
+item.mcx:debug_stick.name=Debug Stick
 
-debug_stick.settings.title=Debug Stick Settings
-debug_stick.settings.platform=Platform Support
-debug_stick.settings.platform.pc=PC
-debug_stick.settings.platform.mobile=Mobile
-debug_stick.settings.platform.all=All
-debug_stick.settings.toggle.states=Add Unused States
-debug_stick.settings.toggle.tag_mode=Enable Tag Mode
-debug_stick.settings.updated=Settings Updated
+message.mcx:debug_stick.steate.mode=selected "%1" (%2)
+message.mcx:debug_stick.state.change="%1" to %2
+message.mcx:debug_stick.no.properties=%1 has no properties
+
+settings.mcx:debug_stick.title=Debug Stick Settings
+settings.mcx:debug_stick.platform=Host Platform
+settings.mcx:debug_stick.platform.pc=PC / (Windows Server)
+settings.mcx:debug_stick.platform.mobile=Mobile / (Ubuntu Server)
+settings.mcx:debug_stick.platform.all=All
+settings.mcx:debug_stick.toggle.states=Add Unused States
+settings.mcx:debug_stick.toggle.tag_mode=Enable Tag Mode
+settings.mcx:debug_stick.updated=Settings Updated
