--- a/Debug_Stick_RP/texts/ja_JP.lang
+++ b/Debug_Stick_RP/texts/ja_JP.lang
@@ -1,14 +1,30 @@
 pack.description=このアドオンは、Java版にあるデバッグ棒を統合版用に再現したものです。
-debug_stick.item.dmc:debug_stick.name=デバッグ棒
-debug_stick.steate.mode=「%1」を選択しました（%2）
-debug_stick.state.change=「%1」を%2に変更しました
-debug_stick.no.properties=%1はプロパティを持っていません
+item.mcx:debug_stick.name=デバッグ棒
 
-debug_stick.settings.title=デバッグ棒の設定
-debug_stick.settings.platform=対応プラットフォーム
-debug_stick.settings.platform.pc=PC版
-debug_stick.settings.platform.mobile=スマホ版
-debug_stick.settings.platform.all=すべて
-debug_stick.settings.toggle.states=未使用のステートを追加
-debug_stick.settings.toggle.tag_mode=タグモードを有効
-debug_stick.settings.updated=設定を更新しました
+message.mcx:debug_stick.steate.mode=「%1」を選択しました（%2）
+message.mcx:debug_stick.state.change=「%1」を%2に変更しました
+message.mcx:debug_stick.no.properties=%1はプロパティを持っていません
+
+settings.mcx:debug_stick.title=デバッグ棒の設定
+settings.mcx:debug_stick.platform=ホストプラットフォーム
+settings.mcx:debug_stick.platform.pc=PC / (Windows Server)
+settings.mcx:debug_stick.platform.mobile=モバイル / (Ubuntu Server)
+settings.mcx:debug_stick.platform.all=全て
+settings.mcx:debug_stick.toggle.states=未使用のステートを追加
+settings.mcx:debug_stick.toggle.tag_mode=タグモードを有効
+settings.mcx:debug_stick.updated=設定を更新しました
+
+howtoplay.debug_stick.title=アドオン：デバッグ棒の使い方
+howtoplay.category.debug_stick=アドオン：デバッグ棒
+howtoplay.debug_stick=デバッグ棒の使い方
+
+howtoplay.mcx:debug_stick.header.1=デバッグ棒とは？
+howtoplay.mcx:debug_stick.text.1=ブロックのステータスを簡単に変更できるツールです。
+howtoplay.mcx:debug_stick.header.2=使用方法
+howtoplay.mcx:debug_stick.text.2.keyboard=デバッグ棒を持ち、ブロックに対して \n:_input_key.use:でステータスを変更できます。\n :_input_key.attack:で変更するステータスを切り替えます。
+howtoplay.mcx:debug_stick.text.2.gamepad=デバッグ棒を持ち、ブロックに対して \n:_input_key.use:でステータスを変更できます。\n :_input_key.attack:で変更するステータスを切り替えます。
+howtoplay.mcx:debug_stick.text.2.touch=デバッグ棒を持ち、ブロックに対して \n:_input_key.use:でステータスを変更できます。\n :_input_key.attack:で変更するステータスを切り替えます。
+howtoplay.mcx:debug_stick.header.3=設定画面 / コマンド:/settings:debug_stick
+howtoplay.mcx:debug_stick.text.3-1=・ホストプラットフォームの設定\n デバッグ棒の動作をホストプラットフォームに合わせて最適化します。
+howtoplay.mcx:debug_stick.text.3-2=・未使用のステートを追加\n デバッグ棒で使用できるステートを全て使用可能にします。
+howtoplay.mcx:debug_stick.text.3-3=・タグモードを有効 / タグ:DebugStick_Mode\n タグモードを有効にすると、権限の代わりになります。
